deploy/k8s/services/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: makewish
spec:
  rules:
    - host: users.makewish.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5001
    - host: wishes.makewish.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: wish-service
                port:
                  number: 5002
